[package]
name = "zcloudpass-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = "0.9.5"
rand = "0.9.2"
base64 = "0.22.1"

[dev-dependencies]
axum-test = "16"
tower = { version = "0.5", features = ["util"] }
http = "1"
http-body-util = "0.1"
